fixed background not showing

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body{
     align-items: center;
     flex-direction:column;
     text-align: center;
-    background:url(../images/bg-pattern.svg) no-repeat;
+    background:url('images/bg-pattern.svg') no-repeat center;
     background-size: cover;
 }
 .circles{
@@ -31,7 +31,7 @@ body{
   top:0rem;
   width:220px;
   height:220px;
-  background:url(./images/pattern-circles.svg) no-repeat center;
+  background:url('images/pattern-circles.svg') no-repeat center;
   background-position: center;
 }
 
